# sharedplate

./: .gitattributes  CHANGELOG.md
.github/workflows/: ci.yml
apps/api/: .env.example  install.sh
apps/api/src/: errors.rs  lib.rs
apps/web/: .env.example  install.sh  package.json
apps/web/app/: page.tsx
apps/web/components/: avatar.tsx  ingredient-list.tsx  navbar.tsx  store-selector.tsx
apps/web/lib/: auth-guard.ts
docs/: architecture.md  code-of-conduct.md  data-models.md
docs/promo/: faq.md  press-kit.md  social-posts.md
foodies/: .editorconfig  .gitignore  LICENSE  Makefile  README.md
foodies/.github/workflows/: lint.yml
foodies/apps/api/: Cargo.toml
foodies/apps/api/src/: config.rs  main.rs
foodies/apps/api/src/auth/: mod.rs
foodies/apps/api/src/handlers/: auth.rs
foodies/apps/api/src/storage/: mod.rs
foodies/apps/api/src/ws/: mod.rs
foodies/apps/api/tests/: health.rs
foodies/apps/web/: LICENSE  next.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
foodies/docs/: ARCHITECTURE_REVIEW.md  contributing.md  getting-started.md  governance.md  moderation.md  privacy.md  terms.md
foodies/docs/promo/: brand-guidelines.md  launch-announcement.md
foodies/docs/prompts/: README.md  documentation_prompt.md  feature_prompt.md  (+1 more)
foodies/scripts/: health_check.sh  install_all.sh  seed.sh  uninstall_all.sh
foodies/web/: index.html
foodies/wiki/: donations.md  shopping-lists.md
infra/docker/: docker-compose.yml
infra/terraform/: README.md
web/: styles.css
wiki/: README.md  feeds.md  getting-started.md  recipes.md
(+37 files in other folders)
