[package]
name = "love-of-food-api"
version = "0.1.0"
edition = "2021"
authors = ["Love of Food Contributors"]
license = "AGPL-3.0-or-later"
description = "Axum API for the Love of Food platform"

[lib]
name = "love_of_food_api"
path = "src/lib.rs"

[[bin]]
name = "love-of-food-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
serde_with = "3.7"
http = "1.0"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
axum-test = "0.4"
